force-app/main/default/objects/Work_Order__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>The zip code of where the work order is to take place.</description>
    <label>Zip Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>