force-app/main/default/objects/Work_Order__c/validationRules/TestValidZip.validationRule-meta.xml
<ValidationRule>
    <fullName>TestValidZip</fullName>
    <active>true</active>
    <description>Tests to see if the zip code is one we are servicing</description>
    <errorConditionFormula>VLOOKUP(  $ObjectType.Available_Zip_Code__c.Fields.Name , 
 $ObjectType.Available_Zip_Code__c.Fields.Name , 
 LEFT(Zip_Code__c,5 )) &lt;&gt; 
 LEFT(Zip_Code__c,5)</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>Validation must match the available zip codes.</errorMessage>
</ValidationRule>